# rpi-pico-basics

./: README.md
00-first_program.d/: README.md
03-usart.d/pico-examples/: CMakeLists.txt
03-usart.d/pico-examples/uart/hello_uart/: CMakeLists.txt  hello_uart.c
03-usart.d/pico-examples/uart/hello_uart/doc/: notes.txt
03-usart.d/pico-examples/usb2/: CMakeLists.txt  usb2.c
03-usart.d/pico-examples/usb2/doc/: notes.txt
07-interpreter.d/pico-examples/interpreter-a/: CMakeLists.txt  interpreter-a.c
